--- a/_config.yml
+++ b/_config.yml
@@ -4,6 +4,7 @@ theme: minima
 @charset "utf-8";
 
 $sol-is-auto: false;
+$sol-is-dark: true;
 @import "minima/skins/solarized";
 minima:
   skin: solarized-dark
