--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,6 @@
 title: Georgia Harbor-Collins
 description : hi
 remote_theme: jekyll/minima
-skin: solarized-dark
+minima:
+  skin: solarized-dark
     
