--- a/_config.yml
+++ b/_config.yml
@@ -1,5 +1,5 @@
 title: Georgia Harbor-Collins
 description: hi
-logo: !(ducks.jpg)
-theme: minima
-    
+remote_theme: jekyll/minima
+minima:
+  skin: dark    
