--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,6 @@
 title: Georgia Harbor-Collins
+author:
+  email: georgia.harbor-collins@uconn.edu
 description: hi
 remote_theme: jekyll/minima
 minima:
