--- a/_config.yml
+++ b/_config.yml
@@ -1,48 +1,16 @@
-# Setup
 title: Georgia Harbor-Collins
-url: georgiaharborcollins@github.io
-paginate: 1
-baseurl: ""
-permalink: pretty
+description: Mathematics Ph.D. Student
+site_title: hi
 
-# Gems
-plugins:
-  - jekyll-gist
-  - jekyll-paginate
-  - jekyll-seo-tag
+# Build settings
+markdown: kramdown
+exclude: [vendor/ruby]
 
-# Optimize Jekyll
-exclude:
-  - .editorconfig
-  - .git
-  - .jekyll-cache
-  - Gemfile
-  - Gemfile.lock
-  - LICENSE.md
-  - README.md
+# Personalization
+email: georgia.harbor-colins@uconn.edu
 
-sass:
-  sass_dir: _sass
-  style: :compressed
+# absolute or relative
+profile_picture: assets/images/profile.png
 
-# Options
-
-# Replace this value and uncomment to enable Google Analytics tracking
-# ga_analytics: UA-000000-0
-
-# Specify the author for blog posts
-author:
-  name: Georgia Harbor-Collins
-  url: georgiaharborcollins@github.io
-  email: georgia.harbor-collins@uconn.edu
-
-# Custom vars
-version: 3.0.0
-
-# Navbar page list
-nav:
-  - title: Blog
-    url: /archive
-
-  - title: About
-    url: /about
+# Google Analytics ID
+google_analytics: 
