--- a/_config.yml
+++ b/_config.yml
@@ -4,7 +4,9 @@ author:
   email: georgia.harbor-collins@uconn.edu
 
 description: >
-  hi
+  Math Dept. UConn,
+  341 Mansfield Road Unit 1009,
+  Storrs, CT 06269-1009.
 
 theme: minima
 
